--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
         "@radix-ui/react-toast": "^1.2.4",
         "@radix-ui/react-tooltip": "^1.1.6",
         "@tailwindcss/postcss": "^4.1.18",
+        "@tailwindcss/vite": "^4.1.17",
         "@tanstack/react-table": "^8.21.3",
+        "@types/react-calendar": "^3.9.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "date-fns": "^4.1.0",
@@ -41,6 +43,7 @@
         "radix-ui": "^1.4.3",
         "react": "^18.2.0",
         "react-aria-components": "^1.12.0",
+        "react-calendar": "^6.0.0",
         "react-day-picker": "^9.4.3",
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.54.2",
@@ -50,8 +53,7 @@
         "tailwind-merge": "^3.4.0",
         "tailwindcss-animate": "^1.0.7",
         "tw-animate-css": "^1.4.0",
-        "vaul": "^1.1.2",
-        "@tailwindcss/vite": "^4.1.17"
+        "vaul": "^1.1.2"
     },
     "devDependencies": {
         "@types/node": "^22.10.5",
